src/test/deca/context/valid/while.deca
// Description:
//    Programme minimaliste utilisant while.
//
// Resultats:
//
//
// Historique:
//    cree le 07/01/2025

{   
   int x;   
   while(1){
        x=x+1; 
   }

}