src/test/deca/context/invalid/declarer_double.deca
// Description:
//    Programme declarant une variable 2 fois .
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
   int x;
   int x;
}